# ESDT-Bridge-SmartContract-Elrond

./: Cargo.toml  README.md  bridge.json  erdpy.json
meta/: Cargo.toml
meta/src/: main.rs
output/: bridge.abi.json  bridge.imports.json  bridge.wasm  bridge.wat
src/: bridge.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
